# llmmetal

./: CMakeLists.txt  README.md
include/llmmetal/: llmmetal.hpp
resources/: checker.ppm
samples/: sample_input_text.cpp  sample_lines.cpp  sample_texture.cpp
src/: llmmetal.mm
